--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -4,7 +4,7 @@
 .container {
   max-width: 1400px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding-inline: 20px;
 }
 
 /* ============ BUTTONS ============ */
@@ -225,7 +225,9 @@
 /* ============ SECTIONS ============ */
 .section {
   background: var(--white);
-  padding: 24px 32px 16px 72px;
+  padding-block: 24px 16px;
+  padding-inline-start: 72px;
+  padding-inline-end: 32px;
   border-radius: 0;
   /* margin: 0 0 16px 0; */
   box-shadow: none;
@@ -261,13 +263,13 @@
 .section ul {
   max-width: 50ch;
   color: var(--text-sub-dark);
-  padding-left: 1.2rem;
+  padding-inline-start: 1.2rem;
 }
 
 /* ============ feature-box (Used across multiple pages) ============ */
 .feature-box {
   background: #eafaf1;
-  border-left: 3px solid var(--accent);
+  border-inline-start: 3px solid var(--accent);
   padding: 24px;
   border-radius: 5px;
   margin: 50px auto;
@@ -293,13 +295,13 @@
 }
 
 .feature-box ul {
-  margin-left: 16px;
+  margin-inline-start: 16px;
 }
 
 /* ============ feature-box right to left ============ */
 .feature-box-rtl {
   background: linear-gradient(to left, #fdfcf8 40%, #fff 100%);
-  border-right: 3px solid var(--accent);
+  border-inline-end: 3px solid var(--accent);
   padding: 24px;
   border-radius: 5px;
   margin: 50px auto;
@@ -325,7 +327,7 @@
 }
 
 .feature-box-rtl ul {
-  margin-right: 16px;
+  margin-inline-end: 16px;
 }
 
 /* ============ TWO COLUMN LAYOUT ============ */
@@ -345,7 +347,7 @@
 }
 
 .column ul {
-  margin-left: 16px;
+  margin-inline-start: 16px;
   line-height: 1.8;
   max-width: 55ch;
 }
@@ -363,7 +365,8 @@
 
   .section {
     background: var(--white);
-    padding: 24px 32px;
+    padding: 24px;
+    padding-inline: 32px;
     border-radius: 0;
     /* margin: 0 0 16px 0; */
     box-shadow: none;
@@ -385,5 +388,5 @@
 /* ============ ICON ITEM ============ */
 .icon-item {
   vertical-align: sub;
-  margin-right: 8px;
+  margin-inline-end: 8px;
 }
